User Pages (Done)

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -34,8 +34,8 @@
   "already_have_account": "هل لديك حساب بالفعل؟",
   "login": "تسجيل الدخول",
 
-  "home_catchy_text": "اكتشف أفضل المطاعم بالقرب منك 🍴",
-  "home_active_orders": "لديك طلبان نشطان",
+  "home_catchy_text": "اطلب أونلاين واستلم في دقائق 📦",
+  "home_active_orders": "لديك طلبان للإستلام",
   "restaurant": "المطعم",
   "restaurants": "المطاعم",
   "home_restaurant_subtitle": "وجبات سريعة • ٢٠ دقيقة"
