--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -34,8 +34,8 @@
   "already_have_account": "Already have an account?",
   "login": "Login",
 
-  "home_catchy_text": "Discover the best restaurants near you 🍴",
-  "home_active_orders": "You have 2 active orders",
+  "home_catchy_text": "Order online, collect in no time 📦",
+  "home_active_orders": "You have 2 orders to pickup",
   "restaurant": "Restaurant",
   "restaurants": "Restaurants",
   "home_restaurant_subtitle": "Fast food • 20 mins"
