Shop & Admin Pages (Done)

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,16 +1,16 @@
 {
   "ar": "العربية",
   "en": "الإنجليزية",
-  "discover_restaurants_title": "اكتشف المطاعم",
-  "discover_restaurants_subtitle": "اعثر على أفضل المطاعم القريبة منك بخطوات بسيطة.",
+  "discover_shops_title": "اكتشف المتاجر والمطاعم",
+  "discover_shops_subtitle": "اعثر على أفضل المتاجر والمطاعم القريبة منك بخطوات بسيطة.",
   "make_your_order_title": "قم بطلبك",
-  "make_your_order_subtitle": "اختر وجباتك المفضلة واطلبها فوراً.",
+  "make_your_order_subtitle": "اختر منتجاتك أو وجباتك المفضلة واطلبها فوراً.",
   "order_confirmed_title": "تم تأكيد الطلب",
   "order_confirmed_subtitle": "ستصلك إشعارات فور قبول طلبك.",
   "pickup_your_order_title": "استلم طلبك",
   "pickup_your_order_subtitle": "اجمع طلبك بسرعة وبكل سهولة.",
-  "enjoy_your_meal_title": "استمتع بوجبتك",
-  "enjoy_your_meal_subtitle": "تناول طعامك أو مشروبك واستمتع بتجربة لذيذة.",
+  "enjoy_your_order_title": "استمتع بطلبك",
+  "enjoy_your_order_subtitle": "استمتع بمنتجاتك أو وجبتك وتجربة رائعة.",
   "skip": "تخطي",
   "get_started": "ابدأ الآن",
   "next": "التالي",
@@ -30,7 +30,8 @@
   "create_account": "إنشاء حساب",
   "signup_continue": "سجل لبدء استخدام جهزها",
   "full_name": "الاسم الكامل",
-  "confirm_password": "تأكيد كلمة المرور",
+  "confirm_password_title": "تأكيد كلمة المرور",
+  "confirm_password": "اعد إدخال كلمة المرور",
   "already_have_account": "هل لديك حساب بالفعل؟",
   "login": "تسجيل الدخول",
 
@@ -38,5 +39,123 @@
   "home_active_orders": "لديك طلبان للإستلام",
   "restaurant": "المطعم",
   "restaurants": "المطاعم",
-  "home_restaurant_subtitle": "وجبات سريعة • ٢٠ دقيقة"
+  "home_restaurant_subtitle": "وجبات سريعة • ٢٠ دقيقة",
+
+  "profile": "الملف الشخصي",
+  "edit_profile": "تعديل الملف الشخصي",
+  "logout": "تسجيل الخروج",
+  "app_settings": "إعدادات التطبيق",
+  "account_settings": "إعدادات الحساب",
+  "notifications": "الإشعارات",
+  "change_email": "تغيير البريد الإلكتروني",
+  "change_password": "تغيير كلمة المرور",
+  "privacy_policy": "سياسة الخصوصية",
+  "change_your_email_title": "تغيير بريدك الإلكتروني",
+  "change_your_email_subtitle": "قم بتحديث بريدك الإلكتروني عن طريق إدخال بريدك الجديد وتفاصيل كلمة المرور أدناه.",
+  "change_your_password_title": "تغيير كلمة المرور",
+  "change_your_password_subtitle": "قم بتحديث كلمة المرور الخاصة بك عن طريق إدخال كلمة المرور الجديدة أدناه.",
+  "old_email_title": "بريدك القديم",
+  "old_email": "أدخل بريدك الإلكتروني القديم",
+  "new_email_title": "بريدك الجديد",
+  "new_email": "أدخل بريدك الإلكتروني الجديد",
+  "old_password": "أدخل كلمة المرور القديمة",
+  "new_password_title": "كلمة مرور جديدة",
+  "new_password": "أدخل كلمة المرور الجديدة",
+  "enter_your_email": "أدخل بريدك الإلكتروني",
+  "enter_your_password": "أدخل كلمة المرور",
+  "email_change_submitted_ar": "تم إرسال طلب تغيير البريد الإلكتروني بنجاح.",
+  "delete_account": "مسح الحساب",
+  "submit": "إرسال",
+  "save_changes": "حفظ التغييرات",
+
+  "privacy_intro": "في جهزها، خصوصيتك مهمة جدًا بالنسبة لنا. توضح سياسة الخصوصية هذه كيف نجمع معلوماتك ونستخدمها ونحميها عند استخدامك لتطبيقنا وخدماتنا.",
+  "privacy_section1_title": "١. المعلومات التي نجمعها",
+  "privacy_section1_desc": "• تفاصيل شخصية مثل اسمك، عنوان بريدك الإلكتروني، رقم هاتفك.\n• بيانات متعلقة بمتجرك، طلباتك، ومنتجاتك.\n• معلومات الاستخدام بما في ذلك تفاعلات التطبيق وتفاصيل الجهاز.",
+  "privacy_section2_title": "٢. كيفية استخدامنا لمعلوماتك",
+  "privacy_section2_desc": "• لتقديم خدماتنا وتحسينها.\n• لمعالجة طلباتك.\n• للتواصل معك بشأن التحديثات، العروض، والدعم.\n• للامتثال للالتزامات القانونية.",
+  "privacy_section3_title": "٣. مشاركة البيانات",
+  "privacy_section3_desc": "نحن لا نبيع أو نؤجر بياناتك الشخصية. قد نشارك معلوماتك مع أطراف ثالثة موثوقة مثل شركاء التوصيل والجهات القانونية عند الحاجة.",
+  "privacy_section4_title": "٤. أمان البيانات",
+  "privacy_section4_desc": "نطبق تدابير أمان قوية لحماية بياناتك. ومع ذلك، لا توجد طريقة نقل أو تخزين آمنة بنسبة 100٪، ولا يمكننا ضمان الأمان المطلق.",
+  "privacy_section5_title": "٥. حقوقك",
+  "privacy_section5_desc": "يمكنك تحديث أو حذف معلوماتك الشخصية في أي وقت من خلال إعدادات حسابك أو بالتواصل مع فريق الدعم.",
+  "privacy_section6_title": "٦. التغييرات على هذه السياسة",
+  "privacy_section6_desc": "قد نقوم بتحديث سياسة الخصوصية هذه من وقت لآخر. سيتم عرض أي تغييرات في التطبيق، ويعني استمرارك في الاستخدام موافقتك على الشروط المحدثة.",
+  "privacy_contact_title": "تواصل معنا",
+  "privacy_contact_desc": "إذا كان لديك أي أسئلة حول سياسة الخصوصية هذه، يرجى التواصل معنا عبر support@gahezha.com",
+
+  "checkout": "إتمام الشراء",
+  "place_order": "إتمام الطلب",
+  "product": "المنتج",
+  "products": "المنتجات",
+  "quantity": "الكمية",
+  "cart": "السلة",
+  "my_cart": "سلة مشترياتي",
+  "your_cart": "سلة مشترياتك",
+  "your_cart_is_empty": "سلة التسوق الخاصة بك فارغة",
+  "item": "عنصر",
+  "items": "عناصر",
+  "total_price": "السعر الإجمالي",
+  "price": "السعر",
+  "prepare_your_order": "جارٍ تجهيز طلبك",
+  "we_are_preparing_your_order": "نقوم الآن بتجهيز طلبك",
+  "order": "طلب",
+  "orders": "الطلبات",
+  "your_order": "طلبك",
+  "pending": "قيد الانتظار",
+  "accepted": "مقبول",
+  "rejected": "مرفوض",
+  "preparing": "يتم التجهيز",
+  "pickup": "استلام",
+  "delivered": "تم التسليم",
+  "placed_on": "تم الطلب في",
+  "close": "إغلاق",
+  "viewing_details_of_order": "عرض تفاصيل الطلب",
+
+  "active_orders": "الطلبات النشطة",
+  "hot_dealers": "عروض ساخنة",
+  "dealer": "تاجر",
+  "special_offer": "عرض خاص",
+  "limited_time": "لفترة محدودة",
+  "recommended": "موصى به",
+  "edit": "تعديل",
+  "settings": "الإعدادات",
+  "shop": "المتجر",
+  "fresh_items_quick_delivery": "منتجات طازجة وتوصيل سريع",
+  "min": "دقيقة",
+  "minuets": "دقائق",
+  "open": "مفتوح",
+  "closed": "مغلق",
+
+  "menu": "القائمة",
+  "info": "معلومات",
+  "add": "إضافة",
+  "flowers_gifts": "زهور وهدايا",
+  "tasty_items_for_you": "أطباق شهية وطازجة مُعدة خصيصاً لك",
+  "shop_info": "معلومات المتجر",
+  "am": "صباحاً",
+  "pm": "مساءً",
+  "pickup_instructions": "تعليمات الاستلام",
+  "pickup_instructions_subtitle": "اطلب عبر التطبيق واستلم من الكاونتر عند الجاهزية.\nاعرض رقم الطلب عند نقطة الاستلام",
+
+  "welcome": "مرحباً",
+  "thanks_for_joining": "شكراً لانضمامك إلى جهزها",
+  "order_ready": "طلبك جاهز",
+  "order_pickup": "طلبك جاهز للاستلام، تفضل بالحضور.",
+  "order_accepted": "تم قبول طلبك",
+  "order_rejected": "تم رفض طلبك",
+  "order_delivered": "تم تسليم طلبك",
+
+  "choose_size": "اختر الحجم",
+  "small": "صغير",
+  "medium": "متوسط",
+  "large": "كبير",
+  "add_extras": "إضافة إضافات",
+  "extra_cheese": "جبنة إضافية",
+  "gift_wrap": "تغليف هدية",
+  "spicy": "حار",
+  "regular": "عادي",
+  "to_cart": "إلى السلة",
+
+  "new_orders": "الطلبات الجديد"
 }
