--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,16 +1,16 @@
 {
   "ar": "AR",
   "en": "EN",
-  "discover_restaurants_title": "Discover Restaurants",
-  "discover_restaurants_subtitle": "Find the best restaurants near you with just a few taps.",
+  "discover_shops_title": "Discover Shops & Restaurants",
+  "discover_shops_subtitle": "Find the best shops and restaurants near you with just a few taps.",
   "make_your_order_title": "Make Your Order",
-  "make_your_order_subtitle": "Choose your favorite meals and place your order instantly.",
+  "make_your_order_subtitle": "Choose your favorite products or meals and place your order instantly.",
   "order_confirmed_title": "Order Confirmed",
   "order_confirmed_subtitle": "Get notified as soon as your order is accepted.",
   "pickup_your_order_title": "Pickup Your Order",
   "pickup_your_order_subtitle": "Collect your order quickly and conveniently.",
-  "enjoy_your_meal_title": "Enjoy Your Meal",
-  "enjoy_your_meal_subtitle": "Eat or drink and enjoy your delicious experience.",
+  "enjoy_your_order_title": "Enjoy Your Order",
+  "enjoy_your_order_subtitle": "Enjoy your products or meals with a great experience.",
   "skip": "Skip",
   "get_started": "Get Started",
   "next": "Next",
@@ -30,7 +30,8 @@
   "create_account": "Create Account",
   "signup_continue": "Sign up to start using Gahezha",
   "full_name": "Full Name",
-  "confirm_password": "Confirm Password",
+  "confirm_password_title": "Confirm Password",
+  "confirm_password": "Re-enter your password",
   "already_have_account": "Already have an account?",
   "login": "Login",
 
@@ -38,5 +39,123 @@
   "home_active_orders": "You have 2 orders to pickup",
   "restaurant": "Restaurant",
   "restaurants": "Restaurants",
-  "home_restaurant_subtitle": "Fast food • 20 mins"
+  "home_restaurant_subtitle": "Fast food • 20 mins",
+
+  "profile": "Profile",
+  "edit_profile": "Edit Profile",
+  "logout": "Logout",
+  "app_settings": "App Settings",
+  "account_settings": "Account Settings",
+  "notifications": "Notifications",
+  "change_email": "Change Email",
+  "change_password": "Change Password",
+  "privacy_policy": "Privacy & Policy",
+  "change_your_email_title": "Change Your Email",
+  "change_your_email_subtitle": "Update your email address by entering your new email and password details below.",
+  "change_your_password_title": "Change Your Password",
+  "change_your_password_subtitle": "Update your password address by entering your new password below.",
+  "old_email_title": "Old email",
+  "old_email": "Enter your old email",
+  "new_email_title": "New email",
+  "new_email": "Enter your new email",
+  "old_password": "Enter your old password",
+  "new_password_title": "New password",
+  "new_password": "Enter your new password",
+  "enter_your_email": "Enter your email",
+  "enter_your_password": "Enter your password",
+  "email_change_submitted": "Your email change request has been submitted successfully.",
+  "delete_account": "Delete Account",
+  "submit": "Submit",
+  "save_changes": "Save Changes",
+
+  "privacy_intro": "At Gahezha, your privacy is very important to us. This Privacy Policy explains how we collect, use, and protect your information when you use our app and services.",
+  "privacy_section1_title": "1. Information We Collect",
+  "privacy_section1_desc": "• Personal details such as your name, email address, phone number.\n• Data related to your shop, orders, and products.\n• Usage information including app interactions and device details.",
+  "privacy_section2_title": "2. How We Use Your Information",
+  "privacy_section2_desc": "• To provide and improve our services.\n• To process your orders.\n• To communicate with you regarding updates, promotions, and support.\n• To comply with legal obligations.",
+  "privacy_section3_title": "3. Data Sharing",
+  "privacy_section3_desc": "We do not sell or rent your personal data. We may share your information with trusted third parties such as delivery partners, and legal authorities when required.",
+  "privacy_section4_title": "4. Data Security",
+  "privacy_section4_desc": "We implement strong security measures to protect your data. However, no method of transmission or storage is 100% secure, and we cannot guarantee absolute security.",
+  "privacy_section5_title": "5. Your Rights",
+  "privacy_section5_desc": "You may update or delete your personal information at any time through your account settings or by contacting our support team.",
+  "privacy_section6_title": "6. Changes to This Policy",
+  "privacy_section6_desc": "We may update this Privacy Policy from time to time. Any changes will be reflected in the app, and continued use means you agree to the updated terms.",
+  "privacy_contact_title": "Contact Us",
+  "privacy_contact_desc": "If you have any questions about this Privacy Policy, please contact us at support@gahezha.com",
+
+  "checkout": "Checkout",
+  "place_order": "Place Order",
+  "product": "Product",
+  "products": "Products",
+  "quantity": "Qty",
+  "cart": "Cart",
+  "my_cart": "My Cart",
+  "your_cart": "Your Cart",
+  "your_cart_is_empty": "Your cart is empty",
+  "item": "item",
+  "items": "items",
+  "total_price": "Total Price",
+  "price": "Price",
+  "prepare_your_order": "Prepare Your Order",
+  "we_are_preparing_your_order": "We are preparing your order",
+  "order": "Order",
+  "orders": "Orders",
+  "your_order": "Your order",
+  "pending": "Pending",
+  "accepted": "Accepted",
+  "rejected": "Rejected",
+  "preparing": "PREPARING",
+  "pickup": "Pickup",
+  "delivered": "Delivered",
+  "placed_on": "Placed on",
+  "close": "Close",
+  "viewing_details_of_order": "Viewing details of order",
+
+  "active_orders": "Active Orders",
+  "hot_dealers": "Hot Dealers",
+  "dealer": "Dealer",
+  "special_offer": "Special Offer",
+  "limited_time": "Limited Time",
+  "recommended": "Recommended",
+  "edit": "Edit",
+  "settings": "Settings",
+  "shop": "Shop",
+  "fresh_items_quick_delivery": "Fresh items & Quick delivery",
+  "min": "min",
+  "minuets": "Minuets",
+  "open": "Open",
+  "closed": "Closed",
+
+  "menu": "Menu",
+  "info": "Info",
+  "add": "Add",
+  "flowers_gifts": "Flowers & Gifts",
+  "tasty_items_for_you": "A tasty and freshly prepared items for you",
+  "shop_info": "Shop Info",
+  "am": "AM",
+  "pm": "PM",
+  "pickup_instructions": "Pickup Instructions",
+  "pickup_instructions_subtitle": "Order online and collect from the counter when ready.\nShow your order ID at pickup point",
+
+  "welcome": "Welcome",
+  "thanks_for_joining": "Thanks for joining Gahezha",
+  "order_ready": "Order Ready",
+  "order_pickup": "Your order is ready for pickup, come and get it.",
+  "order_accepted": "Your order has been accepted",
+  "order_rejected": "Your order has been rejected",
+  "order_delivered": "Your order has been delivered",
+
+  "choose_size": "Choose Size",
+  "small": "Small",
+  "medium": "Medium",
+  "large": "Large",
+  "add_extras": "Add Extras",
+  "extra_cheese": "Extra Cheese",
+  "gift_wrap": "Gift Wrap",
+  "spicy": "Spicy",
+  "regular": "Regular",
+  "to_cart": "to Cart",
+
+  "new_orders": "New Orders"
 }
