All App's Language & Navigation Corrections & User/Guest Model (Done)

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -26,6 +26,7 @@
   "continue_with_google": "تابع باستخدام جوجل",
   "or": "أو",
   "sign_up": "إنشاء حساب",
+  "create_shop": "إنشاء متجر",
 
   "create_account": "إنشاء حساب",
   "signup_continue": "سجل لبدء استخدام جهزها",
@@ -101,10 +102,13 @@
   "we_are_preparing_your_order": "نقوم الآن بتجهيز طلبك",
   "order": "طلب",
   "orders": "الطلبات",
+  "order_details": "تفاصيل الطلب",
   "your_order": "طلبك",
   "pending": "قيد الانتظار",
   "accepted": "مقبول",
   "rejected": "مرفوض",
+  "accept": "قبول",
+  "reject": "رفض",
   "preparing": "يتم التجهيز",
   "pickup": "استلام",
   "delivered": "تم التسليم",
@@ -160,5 +164,114 @@
   "new_orders": "الطلبات الجديد",
 
   "take_a_picture": "التقط صورة",
-  "choose_from_gallery": "اختر من المعرض"
+  "choose_from_gallery": "اختر من المعرض",
+
+  "guest": "زائر",
+  "account": "الحساب",
+  "guest_account": "حساب زائر",
+  "you_need_account_to_view_orders": "تحتاج إلى حساب لعرض الطلبات",
+  "you_need_account_to_add_items_cart": "تحتاج إلى حساب لإضافة منتجات إلى السلة",
+  "you_need_account_to_see_cart_items": "تحتاج إلى حساب لرؤية محتويات السلة",
+  "create_account_to_place_first_order": "أنشئ حسابك لتقديم أول طلب",
+  "first_name": "الاسم الأول",
+  "last_name": "اسم العائلة",
+  "gender": "الجنس",
+  "male": "ذكر",
+  "female": "أنثى",
+  "phone_number": "رقم الهاتف",
+  "reEnter_password": "أعد إدخال كلمة المرور",
+
+  "shop_name": "اسم المتجر",
+  "shop_category": "فئة المتجر",
+  "shop_location": "موقع المتجر",
+  "category": "الفئة",
+  "location": "الموقع",
+  "preparing_time": "مدة التحضير",
+  "opening_hours": "ساعات العمل",
+  "enter_shop_name": "أدخل اسم متجرك",
+  "enter_shop_category": "أدخل فئة متجرك",
+  "enter_shop_location": "أدخل موقع متجرك",
+
+  "see_your_active_orders": "عرض طلباتك النشطة",
+  "create_account_first": "أنشئ حسابك أولاً",
+
+  "sar": "ر.س",
+
+  "shops": "المتاجر",
+  "all_shops": "كل المتاجر",
+  "pending_shops": "المتاجر المعلقة",
+  "recent_orders": "الطلبات الأخيرة",
+  "recent_reports": "التقارير الأخيرة",
+  "see_all": "عرض الكل",
+  "all_reports": "كل التقارير",
+  "reports": "التقارير",
+  "resolved": "تم الحل",
+  "dismissed": "تم رفضه",
+  "fraudulent_activity": "نشاط احتيالي",
+  "report_status": "حالة التقرير",
+  "respond_to_reporter": "الرد على المبلغ",
+  "type_response_here": "اكتب ردك هنا...",
+  "send_response_and_update": "إرسال الرد وتحديث",
+
+  "delete": "حذف",
+  "deleted": "تم الحذف",
+  "block": "حظر",
+  "unblock": "رفع الحظر",
+  "report": "تقرير",
+  "disable": "تعطيل",
+
+  "gahezha": "جهزها",
+  "gahezha_accounts": "حسابات جهزها",
+  "customers": "العملاء",
+  "all": "الكل",
+  "blocked": "محظور",
+  "reported": "تم التبليغ",
+  "disabled": "معطل",
+
+  "this_account_has_been_blocked_and_reported": "تم حظر هذا الحساب والتبليغ عنه",
+  "this_account_has_been_reported": "تم التبليغ عن هذا الحساب",
+  "this_account_has_been_disabled": "تم تعطيل هذا الحساب",
+  "this_account_has_been_blocked": "تم حظر هذا الحساب",
+  "time": "مرة",
+  "times": "مرات",
+
+  "shop_menu": "منيو المتجر",
+  "shop_products": "منتجات المتجر",
+  "no_products_yet": "لا توجد منتجات بعد.",
+  "extra_pickles": "مخلل إضافي",
+  "no_vegetables": "بدون خضروات",
+  "extra_mushrooms": "فطر إضافي",
+  "extra_pepperoni": "بيبروني إضافي",
+  "extra_milk": "حليب إضافي",
+  "whipped_cream": "كريمة مخفوقة",
+  "hot": "ساخن",
+  "iced": "مثلج",
+  "decaf": "خالي من الكافيين",
+
+  "add_product": "اضف منتج",
+  "edit_product": "تعديل المنتج",
+  "images": "الصور",
+  "add_your_product_images": "أضف صور منتجك",
+  "product_name": "اسم المنتج",
+  "enter_product_name": "أدخل اسم المنتج",
+  "product_description": "وصف المنتج",
+  "enter_product_description": "أدخل وصف المنتج",
+  "product_price": "سعر المنتج",
+  "enter_product_price": "أدخل سعر المنتج",
+  "product_quantity": "كمية المنتج",
+  "enter_product_quantity": "أدخل كمية المنتج",
+  "specifications": "المواصفات",
+  "name": "الاسم",
+  "enter_specification_name": "أدخل اسم المواصفة",
+  "edit_option": "تعديل الخيار",
+  "enter_option_name": "أدخل اسم الخيار",
+  "extra_price": "السعر الإضافي",
+  "enter_extra_price": "أدخل السعر الإضافي (0 إذا لم يكن هناك)",
+  "cancel": "إلغاء",
+  "save": "حفظ",
+  "add_option": "إضافة خيار",
+  "add_specification": "إضافة مواصفة",
+  "add_ons": "الإضافات",
+  "edit_add_on": "تعديل الإضافة",
+  "add_add_ons": "إضافة إضافات"
 }
