--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -26,6 +26,7 @@
   "continue_with_google": "Continue with Google",
   "or": "or",
   "sign_up": "Sign Up",
+  "create_shop": "Create Shop",
 
   "create_account": "Create Account",
   "signup_continue": "Sign up to start using Gahezha",
@@ -101,10 +102,13 @@
   "we_are_preparing_your_order": "We are preparing your order",
   "order": "Order",
   "orders": "Orders",
+  "order_details": "Order Details",
   "your_order": "Your order",
   "pending": "Pending",
   "accepted": "Accepted",
   "rejected": "Rejected",
+  "accept": "Accept",
+  "reject": "Reject",
   "preparing": "PREPARING",
   "pickup": "Pickup",
   "delivered": "Delivered",
@@ -160,5 +164,114 @@
   "new_orders": "New Orders",
 
   "take_a_picture": "Take a picture",
-  "choose_from_gallery": "Choose from gallery"
+  "choose_from_gallery": "Choose from gallery",
+
+  "guest": "Guest",
+  "account": "Account",
+  "guest_account": "Guest Account",
+  "you_need_account_to_view_orders": "You need an account to view orders",
+  "you_need_account_to_add_items_cart": "You need an account to add items to cart",
+  "you_need_account_to_see_cart_items": "You need an account to see your cart items",
+  "create_account_to_place_first_order": "Create account to place your first order",
+  "first_name": "First Name",
+  "last_name": "Last Name",
+  "gender": "Gender",
+  "male": "Male",
+  "female": "Female",
+  "phone_number": "Phone Number",
+  "reEnter_password": "Re-enter your password",
+
+  "shop_name": "Shop Name",
+  "shop_category": "Shop Category",
+  "shop_location": "Shop Location",
+  "category": "Category",
+  "location": "Location",
+  "preparing_time": "Preparing Time",
+  "opening_hours": "Opening Hours",
+  "enter_shop_name": "Enter your shop name",
+  "enter_shop_category": "Enter your shop category",
+  "enter_shop_location": "Enter your shop location",
+
+  "see_your_active_orders": "See your active orders",
+  "create_account_first": "Create an account first",
+
+  "sar": "SAR",
+
+  "shops": "Shops",
+  "all_shops": "All Shops",
+  "pending_shops": "Pending Shops",
+  "recent_orders": "Recent Orders",
+  "recent_reports": "Recent Reports",
+  "see_all": "See all",
+  "all_reports": "All Reports",
+  "reports": "Reports",
+  "resolved": "Resolved",
+  "dismissed": "Dismissed",
+  "fraudulent_activity": "Fraudulent Activity",
+  "report_status": "Report Status",
+  "respond_to_reporter": "Respond To Reporter",
+  "type_response_here": "Type your response here...",
+  "send_response_and_update": "Send Response & Update",
+
+  "delete": "Delete",
+  "deleted": "Deleted",
+  "block": "Block",
+  "unblock": "Unblock",
+  "report": "Report",
+  "disable": "Disable",
+
+  "gahezha": "Gahezha",
+  "gahezha_accounts": "Gahezha Accounts",
+  "customers": "Customers",
+  "all": "All",
+  "blocked": "Blocked",
+  "reported": "Reported",
+  "disabled": "Disabled",
+
+  "this_account_has_been_blocked_and_reported": "This account has been blocked and reported",
+  "this_account_has_been_reported": "This account has been reported",
+  "this_account_has_been_disabled": "This account has been disabled",
+  "this_account_has_been_blocked": "This account has been blocked",
+  "time": "time",
+  "times": "times",
+
+  "shop_menu": "Shop Menu",
+  "shop_products": "Shop Products",
+  "no_products_yet": "No products yet.",
+  "extra_pickles": "Extra Pickles",
+  "no_vegetables": "No Vegetables",
+  "extra_mushrooms": "Extra Mushrooms",
+  "extra_pepperoni": "Extra Pepperoni",
+  "extra_milk": "Extra Milk",
+  "whipped_cream": "Whipped Cream",
+  "hot": "Hot",
+  "iced": "Iced",
+  "decaf": "Decaf",
+
+  "add_product": "Add Product",
+  "edit_product": "Edit Product",
+  "images": "Images",
+  "add_your_product_images": "Add your product's images",
+  "product_name": "Product Name",
+  "enter_product_name": "Enter product's name",
+  "product_description": "Product Description",
+  "enter_product_description": "Enter product's description",
+  "product_price": "Product Price",
+  "enter_product_price": "Enter product's price",
+  "product_quantity": "Product Quantity",
+  "enter_product_quantity": "Enter product's quantity",
+  "specifications": "Specifications",
+  "name": "Name",
+  "enter_specification_name": "Enter specification name",
+  "edit_option": "Edit Option",
+  "enter_option_name": "Enter option name",
+  "extra_price": "Extra Price",
+  "enter_extra_price": "Enter extra Price (0 for none)",
+  "cancel": "Cancel",
+  "save": "Save",
+  "add_option": "Add Option",
+  "add_specification": "Add Specification",
+  "add_ons": "Add-ons",
+  "edit_add_on": "Edit Add-On",
+  "add_add_ons": "Add Add-ons"
 }
