--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -276,6 +276,7 @@
   "add_add_ons": "إضافة إضافات",
 
   "edit_shop": "تعديل المتجر",
-  "delete_shop": "حذف متجري"
+  "delete_shop": "حذف متجري",
+  "click_again_to_exit": "اضغط زر العودة مجددًا للخروج من التطبيق."
 
 }
