--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -200,6 +200,8 @@
   "shops": "المتاجر",
   "all_shops": "كل المتاجر",
   "pending_shops": "المتاجر المعلقة",
+  "accepted_shops": "المتاجر المقبولة",
+  "rejected_shops": "المتاجر المرفوضة",
   "recent_orders": "الطلبات الأخيرة",
   "recent_reports": "التقارير الأخيرة",
   "see_all": "عرض الكل",
@@ -277,6 +279,7 @@
 
   "edit_shop": "تعديل المتجر",
   "delete_shop": "حذف متجري",
-  "click_again_to_exit": "اضغط زر العودة مجددًا للخروج من التطبيق."
+  "click_again_to_exit": "اضغط زر العودة مجددًا للخروج من التطبيق.",
 
+  "waiting_for_approval": "في انتظار الموافقة..."
 }
