All Orders & Half Reports (Done)

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -105,6 +105,7 @@
   "order_details": "تفاصيل الطلب",
   "your_order": "طلبك",
   "pending": "قيد الانتظار",
+  "pending_lower": "قيد الانتظار",
   "accepted": "مقبول",
   "rejected": "مرفوض",
   "accept": "قبول",
@@ -203,15 +204,15 @@
   "accepted_shops": "المتاجر المقبولة",
   "rejected_shops": "المتاجر المرفوضة",
   "recent_orders": "الطلبات الأخيرة",
-  "recent_reports": "التقارير الأخيرة",
+  "recent_reports": "البلاغات الأخيرة",
   "see_all": "عرض الكل",
-  "all_reports": "كل التقارير",
-  "reports": "التقارير",
+  "all_reports": "كل البلاغات",
+  "reports": "البلاغات",
   "resolved": "تم الحل",
   "dismissed": "تم رفضه",
   "fraudulent_activity": "نشاط احتيالي",
-  "report_status": "حالة التقرير",
-  "respond_to_reporter": "الرد على المبلغ",
+  "report_status": "حالة البلاغ",
+  "respond_to_reporter": "الرد على المُبلغ",
   "type_response_here": "اكتب ردك هنا...",
   "send_response_and_update": "إرسال الرد وتحديث",
 
@@ -219,19 +220,21 @@
   "deleted": "تم الحذف",
   "block": "حظر",
   "unblock": "رفع الحظر",
-  "report": "تقرير",
+  "report": "بلاغ",
   "disable": "تعطيل",
+  "enable": "تفعيل",
 
   "gahezha": "جهزها",
   "gahezha_accounts": "حسابات جهزها",
   "customers": "العملاء",
   "all": "الكل",
   "blocked": "محظور",
-  "reported": "تم التبليغ",
+  "reported": "تم الإبلاغ",
   "disabled": "معطل",
+  "enabled": "مفعل",
 
-  "this_account_has_been_blocked_and_reported": "تم حظر هذا الحساب والتبليغ عنه",
-  "this_account_has_been_reported": "تم التبليغ عن هذا الحساب",
+  "this_account_has_been_blocked_and_reported": "تم حظر هذا الحساب والإبلاغ عنه",
+  "this_account_has_been_reported": "تم الإبلاغ عن هذا الحساب",
   "this_account_has_been_disabled": "تم تعطيل هذا الحساب",
   "this_account_has_been_blocked": "تم حظر هذا الحساب",
   "time": "مرة",
@@ -281,5 +284,101 @@
   "delete_shop": "حذف متجري",
   "click_again_to_exit": "اضغط زر العودة مجددًا للخروج من التطبيق.",
 
-  "waiting_for_approval": "في انتظار الموافقة..."
+  "waiting_for_approval": "في انتظار الموافقة...",
+
+  "you_have": "لديك",
+  "orders_to_pickup": "طلبات جاهزة للاستلام",
+  "ready_to_pickup": "جاهز للإستلام",
+
+  "fast_food": "وجبات سريعة",
+  "bakery": "مخبز",
+  "cafe": "مقهى",
+  "supermarket": "سوبرماركت",
+  "restaurant": "مطعم",
+  "grocery": "بقالة",
+  "dessert": "حلويات",
+  "juice_bar": "عصائر",
+  "pizza": "بيتزا",
+  "sushi": "سوشي",
+  "seafood": "مأكولات بحرية",
+  "clothing": "ملابس",
+  "electronics": "إلكترونيات",
+  "mobile_phones": "هواتف محمولة",
+  "home_appliances": "أجهزة منزلية",
+  "books": "كتب",
+  "stationery": "أدوات مكتبية",
+  "toys": "ألعاب",
+  "beauty_cosmetics": "تجميل ومستحضرات",
+  "jewelry": "مجوهرات",
+  "sports": "رياضة",
+  "fitness": "لياقة بدنية",
+  "pharmacy": "صيدلية",
+  "flowers": "زهور",
+  "gifts": "هدايا",
+  "furniture": "أثاث",
+  "pet_shop": "محل حيوانات أليفة",
+  "music_instruments": "موسيقى وآلات",
+  "car_accessories": "إكسسوارات سيارات",
+  "shoes": "أحذية",
+  "handmade_crafts": "أشغال يدوية",
+  "ice_cream": "آيس كريم",
+  "fast_casual": "وجبات سريعة مريحة",
+  "organic_food": "أطعمة عضوية",
+  "vegan": "نباتي",
+  "tea_house": "بيت الشاي",
+  "dessert_cafe": "مقهى حلويات",
+  "bakery_coffee": "مخبز ومقهى",
+  "street_food": "أطعمة الشارع",
+  "bar": "بار",
+  "night_club": "نادي ليلي",
+  "internet_cafe": "مقهى إنترنت",
+  "photography_studio": "استوديو تصوير",
+  "bookstore_cafe": "مكتبة ومقهى",
+
+  "copied_to_clipboard": "تم النسخ إلى الحافظة",
+
+  "admin_shop_not_fulfilling_orders": "المتجر لا ينفذ الطلبات",
+  "admin_shop_rejecting_orders_too_often": "المتجر يرفض/يلغي الطلبات بشكل متكرر",
+  "admin_wrong_items_sent": "تم إرسال منتجات خاطئة / منتجات مفقودة",
+  "admin_shop_not_responsive": "المتجر غير متجاوب مع العملاء",
+  "admin_customers_reporting_bad_behavior": "إبلاغ العملاء عن سلوك غير لائق",
+  "admin_fake_or_invalid_orders": "طلبات وهمية أو غير صالحة",
+  "admin_customer_disputes": "نزاعات العملاء على المنتجات أو الاستلام",
+  "admin_order_not_picked_up": "الطلب لم يتم استلامه",
+  "admin_order_missing_items": "الطلب يحتوي على عناصر مفقودة",
+  "admin_miscommunication": "سوء التفاهم بين المتجر والعميل",
+  "admin_order_delayed": "تأخر الطلب عن الوقت المتوقع للتحضير",
+  "admin_technical_issues": "مشاكل تقنية (تعطل التطبيق، بيانات خاطئة)",
+
+  "shop_customer_not_picked_up": "العميل لم يستلم الطلب",
+  "shop_customer_wrong_info": "العميل قدم معلومات خاطئة (رقم الهاتف، الاسم)",
+  "shop_customer_complained_unnecessarily": "العميل اشتكى من المنتجات بدون سبب",
+  "shop_order_unclear_instructions": "الطلب يحتوي على تعليمات غير واضحة",
+  "shop_unable_to_prepare_order": "غير قادر على تحضير الطلب في الوقت المحدد",
+  "shop_extra_or_missing_items": "تم الإبلاغ عن عناصر إضافية أو مفقودة",
+  "shop_order_notifications_not_received": "لم يتم استلام إشعارات الطلب",
+  "shop_app_crashes": "تعطل التطبيق أثناء معالجة الطلب",
+
+  "customer_wrong_items_received": "تم استلام منتجات خاطئة",
+  "customer_items_missing": "عناصر مفقودة",
+  "customer_order_late": "تم تحضير الطلب متأخر / غير جاهز في الوقت المحدد",
+  "customer_poor_quality": "جودة المنتجات ضعيفة",
+  "customer_rude_staff": "سلوك موظفي المتجر غير مهذب",
+  "customer_wrong_shop_info": "معلومات المتجر خاطئة",
+  "customer_shop_unresponsive": "المتجر غير متجاوب",
+  "customer_app_crashes": "تعطل التطبيق",
+  "customer_notifications_not_working": "الإشعارات لا تعمل",
+  "customer_order_tracking_issues": "مشاكل في تتبع الطلب",
+
+  "create_report": "إنشاء بلاغ",
+  "edit_report": "تعديل البلاغ",
+  "delete_report": "حذف البلاغ",
+  "report_type": "نوع البلاغ",
+  "assign_to": "تعيين إلى",
+  "report_description": "وصف البلاغ",
+
+  "report_customer": "الإبلاغ عن عميل",
+  "report_shop": "الإبلاغ عن متجر",
+  "report_app": "الإبلاغ إلى جهزها",
+  "no_reports_found": "لم يتم العثور على اي بلاغات"
 }
