--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -104,14 +104,15 @@
   "orders": "Orders",
   "order_details": "Order Details",
   "your_order": "Your order",
-  "pending": "Pending",
-  "accepted": "Accepted",
-  "rejected": "Rejected",
+  "pending": "PENDING",
+  "pending_lower": "Pending",
+  "accepted": "ACCEPTED",
+  "rejected": "REJECTED",
   "accept": "Accept",
   "reject": "Reject",
   "preparing": "PREPARING",
-  "pickup": "Pickup",
-  "delivered": "Delivered",
+  "pickup": "PICKUP",
+  "delivered": "DELIVERED",
   "placed_on": "Placed on",
   "close": "Close",
   "viewing_details_of_order": "Viewing details of order",
@@ -221,6 +222,7 @@
   "unblock": "Unblock",
   "report": "Report",
   "disable": "Disable",
+  "enable": "Enable",
 
   "gahezha": "Gahezha",
   "gahezha_accounts": "Gahezha Accounts",
@@ -229,6 +231,7 @@
   "blocked": "Blocked",
   "reported": "Reported",
   "disabled": "Disabled",
+  "enabled": "Enabled",
 
   "this_account_has_been_blocked_and_reported": "This account has been blocked and reported",
   "this_account_has_been_reported": "This account has been reported",
@@ -281,5 +284,101 @@
   "delete_shop": "Delete My Shop",
   "click_again_to_exit": "Click back again to exit.",
 
-  "waiting_for_approval": "Waiting for approval..."
+  "waiting_for_approval": "Waiting for approval...",
+
+  "you_have": "You have",
+  "orders_to_pickup": "orders to pickup",
+  "ready_to_pickup": "Ready to Pickup",
+
+  "fast_food": "Fast Food",
+  "bakery": "Bakery",
+  "cafe": "Cafe",
+  "supermarket": "Supermarket",
+  "restaurant": "Restaurant",
+  "grocery": "Grocery",
+  "dessert": "Dessert",
+  "juice_bar": "Juice Bar",
+  "pizza": "Pizza",
+  "sushi": "Sushi",
+  "seafood": "Seafood",
+  "clothing": "Clothing",
+  "electronics": "Electronics",
+  "mobile_phones": "Mobile Phones",
+  "home_appliances": "Home Appliances",
+  "books": "Books",
+  "stationery": "Stationery",
+  "toys": "Toys",
+  "beauty_cosmetics": "Beauty & Cosmetics",
+  "jewelry": "Jewelry",
+  "sports": "Sports",
+  "fitness": "Fitness",
+  "pharmacy": "Pharmacy",
+  "flowers": "Flowers",
+  "gifts": "Gifts",
+  "furniture": "Furniture",
+  "pet_shop": "Pet Shop",
+  "music_instruments": "Music & Instruments",
+  "car_accessories": "Car Accessories",
+  "shoes": "Shoes",
+  "handmade_crafts": "Handmade Crafts",
+  "ice_cream": "Ice Cream",
+  "fast_casual": "Fast Casual",
+  "organic_food": "Organic Food",
+  "vegan": "Vegan",
+  "tea_house": "Tea House",
+  "dessert_cafe": "Dessert Cafe",
+  "bakery_coffee": "Bakery & Coffee",
+  "street_food": "Street Food",
+  "bar": "Bar",
+  "night_club": "Night Club",
+  "internet_cafe": "Internet Cafe",
+  "photography_studio": "Photography Studio",
+  "bookstore_cafe": "Bookstore & Cafe",
+
+  "copied_to_clipboard": "Copied to clipboard",
+
+  "admin_shop_not_fulfilling_orders": "Shop not fulfilling orders",
+  "admin_shop_rejecting_orders_too_often": "Shop rejecting/cancelling orders too often",
+  "admin_wrong_items_sent": "Wrong items sent / missing items",
+  "admin_shop_not_responsive": "Shop not responsive to customers",
+  "admin_customers_reporting_bad_behavior": "Customers reporting bad behavior",
+  "admin_fake_or_invalid_orders": "Fake or invalid orders",
+  "admin_customer_disputes": "Customer disputes on items or pickup",
+  "admin_order_not_picked_up": "Order not picked up",
+  "admin_order_missing_items": "Order missing items",
+  "admin_miscommunication": "Miscommunication between shop and customer",
+  "admin_order_delayed": "Order delayed beyond expected prep time",
+  "admin_technical_issues": "Technical issues (app crashes, wrong data)",
+
+  "shop_customer_not_picked_up": "Customer didn’t pick up order",
+  "shop_customer_wrong_info": "Customer provided wrong info (phone number, name)",
+  "shop_customer_complained_unnecessarily": "Customer complained about items unnecessarily",
+  "shop_order_unclear_instructions": "Order contains unclear instructions",
+  "shop_unable_to_prepare_order": "Unable to prepare order on time",
+  "shop_extra_or_missing_items": "Extra items or missing items reported",
+  "shop_order_notifications_not_received": "Order notifications not received",
+  "shop_app_crashes": "App crashes during order handling",
+
+  "customer_wrong_items_received": "Wrong items received",
+  "customer_items_missing": "Items missing",
+  "customer_order_late": "Order prepared late / not ready on time",
+  "customer_poor_quality": "Poor quality of items",
+  "customer_rude_staff": "Rude shop staff",
+  "customer_wrong_shop_info": "Wrong shop information",
+  "customer_shop_unresponsive": "Unresponsive shop",
+  "customer_app_crashes": "App crashes",
+  "customer_notifications_not_working": "Notifications not working",
+  "customer_order_tracking_issues": "Order tracking issues",
+
+  "create_report": "Create Report",
+  "edit_report": "Edit Report",
+  "delete_report": "Delete Report",
+  "report_type": "Report Type",
+  "assign_to": "Assign to",
+  "report_description": "Report description",
+
+  "report_customer": "Report Customer",
+  "report_shop": "Report Shop",
+  "report_app": "Report Gahezha",
+  "no_reports_found": "No reports found"
 }
